# experiments

./: .gitmodules  ee.csv
Benchmarking/: analyze_benchmarking_data  benchmark_collected_data.p  benchmark_joint_angle_list.p  benchmark_pose_list.p  benchmark_positions_list.p  disable_arm.py  execute_benchmarking  record_poses  record_positions  single_position_test.py  std_data.p  vive_interface.py
as5601_publisher/: as5601_publisher.ino
as5601_test/: as5601_test.ino
clearpath_synced/: Clearpath.cpp  Clearpath.h  clearpath_synced.ino
clearpath_test/: clearpath_test.ino
clearpath_timers/: Clearpath.cpp  Clearpath.h  clearpath_timers.ino
config/: clearpath_config_halfstep.mtr  clearpath_incremental.mtr
controller/: controller.ino
icra_plots/: .plot.py.swp  .vive.csv.swp  3_heat_power.eps  all_heat_power.eps  dist_prec.csv  end.csv  heat_power.eps  helpers.py  lim_other_quig0_svd_pc1_pc2.eps  lim_other_quig1_svd_pc1_pc2.eps  lim_other_quig2_svd_pc1_pc2.eps  lim_other_quig3_svd_pc1_pc2.eps  lim_other_quig4_svd_pc1_pc2.eps  lim_other_quig5_svd_pc1_pc2.eps  lim_other_quig6_svd_pc1_pc2.eps  lim_other_quig7_svd_pc1_pc2.eps  no_legend_3_heat_power.eps  other_8.csv  other_quig0_svd_pc1_pc2  other_quig0_svd_pc1_pc2.eps  other_quig1_svd_pc1_pc2  other_quig1_svd_pc1_pc2.eps  other_quig2.csv  other_quig2_svd_pc1_pc2  other_quig2_svd_pc1_pc2.eps  other_quig3_svd_pc1_pc2  other_quig3_svd_pc1_pc2.eps  other_quig4_svd_pc1_pc2  other_quig4_svd_pc1_pc2.eps  (+41 more)
twisted_string/: CMakeLists.txt  README.md  package.xml
twisted_string/scripts/: everything.py  everything_backoff.py
(+46 files in other folders)
